--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>%VITE_APP_TITLE%</title>
+    <!-- <script src="/EasyWasmPlayer.js"></script> -->
   </head>
+
   <body>
     <div id="app"></div>
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = 'https://www.clarity.ms/tag/' + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, 'clarity', 'script', 'no47mbcicr');
+    </script>
+    <script>
+      window._AMapSecurityConfig = {
+        securityJsCode: '2483a3a12b79b9428d87e1bcac19c446'
+      };
+    </script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
