--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
@@ -21,7 +22,9 @@
         t.async = 1;
         t.src = 'https://www.clarity.ms/tag/' + i;
         y = l.getElementsByTagName(r)[0];
-        y.parentNode.insertBefore(t, y);
+        if (y && y.parentNode) {
+          y.parentNode.insertBefore(t, y);
+        }
       })(window, document, 'clarity', 'script', 'no47mbcicr');
     </script>
     <script>
