--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_APP_TITLE%</title>
     <!-- <script src="/EasyWasmPlayer.js"></script> -->
+    <meta http-equiv="Content-Language" content="en" />
   </head>
 
   <body>
